--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 icons_launcher:
-  image_path: "assets/gmf.png"
+  image_path: "assets/logo-kopi.png"
   platforms:
     android:
       enable: true
