--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,16 +52,21 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.13.1"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-icons_launcher:
+# icons_launcher:
+#   image_path: "assets/logo-kopi.png"
+#   platforms:
+#     android:
+#       enable: true
+#     ios:
+#       enable: true
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
   image_path: "assets/logo-kopi.png"
-  platforms:
-    android:
-      enable: true
-    ios:
-      enable: true
 # The following section is specific to Flutter packages.
 flutter:
   assets:
